src/main/java/org/easysoc/plugins/firrtl/parser/FirrtlLanguageParser.java
// Generated from /media/itviewer/linux/easysoc/easysoc-firrtl/src/main/antlr/FirrtlLanguage.g4 by ANTLR 4.8
package org.easysoc.plugins.firrtl.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FirrtlLanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, Key_circuit=70, Key_module=71, Key_extmodule=72, 
		Key_parameter=73, Key_input=74, Key_output=75, Key_UInt=76, Key_SInt=77, 
		Key_Clock=78, Key_Analog=79, Key_Fixed=80, Key_flip=81, Key_wire=82, Key_reg=83, 
		Key_with=84, Key_reset=85, Key_mem=86, Key_depth=87, Key_reader=88, Key_writer=89, 
		Key_readwriter=90, Key_inst=91, Key_of=92, Key_node=93, Key_is=94, Key_invalid=95, 
		Key_when=96, Key_else=97, Key_stop=98, Key_printf=99, Key_skip=100, Key_old=101, 
		Key_new=102, Key_undefined=103, Key_mux=104, Key_validif=105, Key_cmem=106, 
		Key_smem=107, Key_mport=108, Key_infer=109, Key_read=110, Key_write=111, 
		Key_rdwr=112, UnsignedInt=113, SignedInt=114, HexLit=115, DoubleLit=116, 
		StringLit=117, RawString=118, FileInfo=119, Id=120, RelaxedId=121, COMMENT=122, 
		WHITESPACE=123, NEWLINE=124, ERRCHAR=125, INDENT=126, DEDENT=127;
	public static final int
		RULE_circuit = 0, RULE_module = 1, RULE_port = 2, RULE_dir = 3, RULE_type = 4, 
		RULE_field = 5, RULE_defname = 6, RULE_parameter = 7, RULE_moduleBlock = 8, 
		RULE_simple_reset0 = 9, RULE_simple_reset = 10, RULE_reset_block = 11, 
		RULE_stmt = 12, RULE_memField = 13, RULE_simple_stmt = 14, RULE_suite = 15, 
		RULE_when = 16, RULE_info = 17, RULE_mdir = 18, RULE_ruw = 19, RULE_exp = 20, 
		RULE_id = 21, RULE_fieldId = 22, RULE_intLit = 23, RULE_lowerBound = 24, 
		RULE_upperBound = 25, RULE_boundValue = 26, RULE_keywordAsId = 27, RULE_primop = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"circuit", "module", "port", "dir", "type", "field", "defname", "parameter", 
			"moduleBlock", "simple_reset0", "simple_reset", "reset_block", "stmt", 
			"memField", "simple_stmt", "suite", "when", "info", "mdir", "ruw", "exp", 
			"id", "fieldId", "intLit", "lowerBound", "upperBound", "boundValue", 
			"keywordAsId", "primop"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "'<'", "'>'", "'Interval'", "'.'", "'AsyncReset'", "'Reset'", 
			"'{'", "'}'", "'['", "']'", "'defname'", "'='", "'=>'", "'('", "')'", 
			"'<='", "'<-'", "'stop('", "'printf('", "'attach'", "'data-type'", "'read-latency'", 
			"'write-latency'", "'read-under-write'", "'mux('", "'validif('", "'?'", 
			"'add('", "'sub('", "'mul('", "'div('", "'rem('", "'lt('", "'leq('", 
			"'gt('", "'geq('", "'eq('", "'neq('", "'pad('", "'asUInt('", "'asAsyncReset('", 
			"'asSInt('", "'asClock('", "'asFixedPoint('", "'asInterval('", "'shl('", 
			"'shr('", "'dshl('", "'dshr('", "'cvt('", "'neg('", "'not('", "'and('", 
			"'or('", "'xor('", "'andr('", "'orr('", "'xorr('", "'cat('", "'bits('", 
			"'head('", "'tail('", "'incp('", "'decp('", "'setp('", "'wrap('", "'clip('", 
			"'squz('", "'circuit'", "'module'", "'extmodule'", "'parameter'", "'input'", 
			"'output'", "'UInt'", "'SInt'", "'Clock'", "'Analog'", "'Fixed'", "'flip'", 
			"'wire'", "'reg'", "'with'", "'reset'", "'mem'", "'depth'", "'reader'", 
			"'writer'", "'readwriter'", "'inst'", "'of'", "'node'", "'is'", "'invalid'", 
			"'when'", "'else'", "'stop'", "'printf'", "'skip'", "'old'", "'new'", 
			"'undefined'", "'mux'", "'validif'", "'cmem'", "'smem'", "'mport'", "'infer'", 
			"'read'", "'write'", "'rdwr'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "Key_circuit", 
			"Key_module", "Key_extmodule", "Key_parameter", "Key_input", "Key_output", 
			"Key_UInt", "Key_SInt", "Key_Clock", "Key_Analog", "Key_Fixed", "Key_flip", 
			"Key_wire", "Key_reg", "Key_with", "Key_reset", "Key_mem", "Key_depth", 
			"Key_reader", "Key_writer", "Key_readwriter", "Key_inst", "Key_of", "Key_node", 
			"Key_is", "Key_invalid", "Key_when", "Key_else", "Key_stop", "Key_printf", 
			"Key_skip", "Key_old", "Key_new", "Key_undefined", "Key_mux", "Key_validif", 
			"Key_cmem", "Key_smem", "Key_mport", "Key_infer", "Key_read", "Key_write", 
			"Key_rdwr", "UnsignedInt", "SignedInt", "HexLit", "DoubleLit", "StringLit", 
			"RawString", "FileInfo", "Id", "RelaxedId", "COMMENT", "WHITESPACE", 
			"NEWLINE", "ERRCHAR", "INDENT", "DEDENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FirrtlLanguage.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FirrtlLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CircuitContext extends ParserRuleContext {
		public TerminalNode Key_circuit() { return getToken(FirrtlLanguageParser.Key_circuit, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode INDENT() { return getToken(FirrtlLanguageParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(FirrtlLanguageParser.DEDENT, 0); }
		public TerminalNode EOF() { return getToken(FirrtlLanguageParser.EOF, 0); }
		public InfoContext info() {
			return getRuleContext(InfoContext.class,0);
		}
		public List<ModuleContext> module() {
			return getRuleContexts(ModuleContext.class);
		}
		public ModuleContext module(int i) {
			return getRuleContext(ModuleContext.class,i);
		}
		public CircuitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_circuit; }
	}

	public final CircuitContext circuit() throws RecognitionException {
		CircuitContext _localctx = new CircuitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_circuit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(Key_circuit);
			setState(59);
			id();
			setState(60);
			match(T__0);
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FileInfo) {
				{
				setState(61);
				info();
				}
			}

			setState(64);
			match(INDENT);
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Key_module || _la==Key_extmodule) {
				{
				{
				setState(65);
				module();
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(71);
			match(DEDENT);
			setState(72);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleContext extends ParserRuleContext {
		public TerminalNode Key_module() { return getToken(FirrtlLanguageParser.Key_module, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode INDENT() { return getToken(FirrtlLanguageParser.INDENT, 0); }
		public ModuleBlockContext moduleBlock() {
			return getRuleContext(ModuleBlockContext.class,0);
		}
		public TerminalNode DEDENT() { return getToken(FirrtlLanguageParser.DEDENT, 0); }
		public InfoContext info() {
			return getRuleContext(InfoContext.class,0);
		}
		public List<PortContext> port() {
			return getRuleContexts(PortContext.class);
		}
		public PortContext port(int i) {
			return getRuleContext(PortContext.class,i);
		}
		public TerminalNode Key_extmodule() { return getToken(FirrtlLanguageParser.Key_extmodule, 0); }
		public DefnameContext defname() {
			return getRuleContext(DefnameContext.class,0);
		}
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_module);
		int _la;
		try {
			int _alt;
			setState(114);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Key_module:
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				match(Key_module);
				setState(75);
				id();
				setState(76);
				match(T__0);
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==FileInfo) {
					{
					setState(77);
					info();
					}
				}

				setState(80);
				match(INDENT);
				setState(84);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(81);
						port();
						}
						} 
					}
					setState(86);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				}
				setState(87);
				moduleBlock();
				setState(88);
				match(DEDENT);
				}
				break;
			case Key_extmodule:
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				match(Key_extmodule);
				setState(91);
				id();
				setState(92);
				match(T__0);
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==FileInfo) {
					{
					setState(93);
					info();
					}
				}

				setState(96);
				match(INDENT);
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Key_input || _la==Key_output) {
					{
					{
					setState(97);
					port();
					}
					}
					setState(102);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__11) {
					{
					setState(103);
					defname();
					}
				}

				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Key_parameter) {
					{
					{
					setState(106);
					parameter();
					}
					}
					setState(111);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(112);
				match(DEDENT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PortContext extends ParserRuleContext {
		public DirContext dir() {
			return getRuleContext(DirContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(FirrtlLanguageParser.NEWLINE, 0); }
		public InfoContext info() {
			return getRuleContext(InfoContext.class,0);
		}
		public PortContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_port; }
	}

	public final PortContext port() throws RecognitionException {
		PortContext _localctx = new PortContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_port);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			dir();
			setState(117);
			id();
			setState(118);
			match(T__0);
			setState(119);
			type(0);
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FileInfo) {
				{
				setState(120);
				info();
				}
			}

			setState(123);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DirContext extends ParserRuleContext {
		public TerminalNode Key_input() { return getToken(FirrtlLanguageParser.Key_input, 0); }
		public TerminalNode Key_output() { return getToken(FirrtlLanguageParser.Key_output, 0); }
		public DirContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dir; }
	}

	public final DirContext dir() throws RecognitionException {
		DirContext _localctx = new DirContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_dir);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			_la = _input.LA(1);
			if ( !(_la==Key_input || _la==Key_output) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode Key_UInt() { return getToken(FirrtlLanguageParser.Key_UInt, 0); }
		public List<IntLitContext> intLit() {
			return getRuleContexts(IntLitContext.class);
		}
		public IntLitContext intLit(int i) {
			return getRuleContext(IntLitContext.class,i);
		}
		public TerminalNode Key_SInt() { return getToken(FirrtlLanguageParser.Key_SInt, 0); }
		public TerminalNode Key_Fixed() { return getToken(FirrtlLanguageParser.Key_Fixed, 0); }
		public LowerBoundContext lowerBound() {
			return getRuleContext(LowerBoundContext.class,0);
		}
		public List<BoundValueContext> boundValue() {
			return getRuleContexts(BoundValueContext.class);
		}
		public BoundValueContext boundValue(int i) {
			return getRuleContext(BoundValueContext.class,i);
		}
		public UpperBoundContext upperBound() {
			return getRuleContext(UpperBoundContext.class,0);
		}
		public TerminalNode Key_Clock() { return getToken(FirrtlLanguageParser.Key_Clock, 0); }
		public TerminalNode Key_Analog() { return getToken(FirrtlLanguageParser.Key_Analog, 0); }
		public List<FieldContext> field() {
			return getRuleContexts(FieldContext.class);
		}
		public FieldContext field(int i) {
			return getRuleContext(FieldContext.class,i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		return type(0);
	}

	private TypeContext type(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		TypeContext _localctx = new TypeContext(_ctx, _parentState);
		TypeContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_type, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(187);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Key_UInt:
				{
				setState(128);
				match(Key_UInt);
				setState(133);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					setState(129);
					match(T__1);
					setState(130);
					intLit();
					setState(131);
					match(T__2);
					}
					break;
				}
				}
				break;
			case Key_SInt:
				{
				setState(135);
				match(Key_SInt);
				setState(140);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
				case 1:
					{
					setState(136);
					match(T__1);
					setState(137);
					intLit();
					setState(138);
					match(T__2);
					}
					break;
				}
				}
				break;
			case Key_Fixed:
				{
				setState(142);
				match(Key_Fixed);
				setState(147);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
				case 1:
					{
					setState(143);
					match(T__1);
					setState(144);
					intLit();
					setState(145);
					match(T__2);
					}
					break;
				}
				setState(155);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
				case 1:
					{
					setState(149);
					match(T__1);
					setState(150);
					match(T__1);
					setState(151);
					intLit();
					setState(152);
					match(T__2);
					setState(153);
					match(T__2);
					}
					break;
				}
				}
				break;
			case T__3:
				{
				setState(157);
				match(T__3);
				setState(163);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
				case 1:
					{
					setState(158);
					lowerBound();
					setState(159);
					boundValue();
					setState(160);
					boundValue();
					setState(161);
					upperBound();
					}
					break;
				}
				setState(167);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
				case 1:
					{
					setState(165);
					match(T__4);
					setState(166);
					intLit();
					}
					break;
				}
				}
				break;
			case Key_Clock:
				{
				setState(169);
				match(Key_Clock);
				}
				break;
			case T__5:
				{
				setState(170);
				match(T__5);
				}
				break;
			case T__6:
				{
				setState(171);
				match(T__6);
				}
				break;
			case Key_Analog:
				{
				setState(172);
				match(Key_Analog);
				setState(177);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
				case 1:
					{
					setState(173);
					match(T__1);
					setState(174);
					intLit();
					setState(175);
					match(T__2);
					}
					break;
				}
				}
				break;
			case T__7:
				{
				setState(179);
				match(T__7);
				setState(183);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((((_la - 70)) & ~0x3f) == 0 && ((1L << (_la - 70)) & ((1L << (Key_circuit - 70)) | (1L << (Key_module - 70)) | (1L << (Key_extmodule - 70)) | (1L << (Key_parameter - 70)) | (1L << (Key_input - 70)) | (1L << (Key_output - 70)) | (1L << (Key_UInt - 70)) | (1L << (Key_SInt - 70)) | (1L << (Key_Clock - 70)) | (1L << (Key_Analog - 70)) | (1L << (Key_Fixed - 70)) | (1L << (Key_flip - 70)) | (1L << (Key_wire - 70)) | (1L << (Key_reg - 70)) | (1L << (Key_with - 70)) | (1L << (Key_reset - 70)) | (1L << (Key_mem - 70)) | (1L << (Key_depth - 70)) | (1L << (Key_reader - 70)) | (1L << (Key_writer - 70)) | (1L << (Key_readwriter - 70)) | (1L << (Key_inst - 70)) | (1L << (Key_of - 70)) | (1L << (Key_node - 70)) | (1L << (Key_is - 70)) | (1L << (Key_invalid - 70)) | (1L << (Key_when - 70)) | (1L << (Key_else - 70)) | (1L << (Key_stop - 70)) | (1L << (Key_printf - 70)) | (1L << (Key_skip - 70)) | (1L << (Key_old - 70)) | (1L << (Key_new - 70)) | (1L << (Key_undefined - 70)) | (1L << (Key_mux - 70)) | (1L << (Key_validif - 70)) | (1L << (Key_cmem - 70)) | (1L << (Key_smem - 70)) | (1L << (Key_mport - 70)) | (1L << (Key_infer - 70)) | (1L << (Key_read - 70)) | (1L << (Key_write - 70)) | (1L << (Key_rdwr - 70)) | (1L << (UnsignedInt - 70)) | (1L << (Id - 70)) | (1L << (RelaxedId - 70)))) != 0)) {
